--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ body {
 
 body {
     background: #27292e;
+    background: url('../img/ConceptBkgDark.jpg');
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 18px;
@@ -759,9 +760,17 @@ a.head-button:hover {
 /***============================
 Intro Area
 =============================**/
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+      /* background: $background */
+  }
+
 .intro-area {
     background-color: #000;
-    background: url('../img/cover/bg.jpg');
+    background: url('../img/cover/bg5.jpg');
     background-size: cover;
     height: 100%;
     width: 100%;
@@ -852,6 +861,7 @@ Profile Area
 
 .profile {
     background: #35363b;
+    /* background: url('../img/ConceptBkg.png'); */
     border-radius: 2px;
     padding: 60px;
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.03), 0 3px 1px -2px rgba(0, 0, 0, 0.03), 0 1px 5px 0 rgba(0, 0, 0, 0.03);
